<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week\'s asteroids</string>
    <string name="today_asteroids">View today\'s asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomical_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="potentially_hazardous_asteroid_icon">Potentially hazardous asteroid indicator</string>
    <string name="not_hazardous_asteroid_icon">Not hazardous asteroid indicator</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="api_error_message_format">Unable to retrieve latest %s. Please try again later</string>
    <string name="sample_asteroid_name">(2015 xk351)</string>
    <string name="sample_close_approach_date">2020-02-08</string>
    <string name="sample_absolute_magnitude">25.126 au</string>
    <string name="sample_estimated_diameter">0.82 km</string>
    <string name="sample_relative_velocity">11.9 km/s</string>
    <string name="sample_distance_from_earth">0.0924 au</string>
    <string name="preview_list_item_count">10</string>
    <string name="asteroid_api_description">asteroid data</string>
    <string name="image_api_description">image of the day</string>
</resources>
